Fix horizontal spacing in phase-list
fixes #250.

Note that this fixes only the vertical spacing and does not do any other
styling changes.

--- a/meinberlin/assets/scss/components/_phases.scss
+++ b/meinberlin/assets/scss/components/_phases.scss
@@ -12,6 +12,7 @@
         display: inline-block;
         position: relative;
         margin-right: 5px;
+        margin-bottom: 0.5em;
 
         &:after {
             content: "";
